--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
         android:layout_height="match_parent"
         android:src="@drawable/a"/>
 
-    <ImageView
+    <ImageButton
+        android:id="@+id/setting"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/ic_settings_black_24dp"
@@ -41,7 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvMy"
-        android:text="Fighter / PSHT"
+        android:text="@string/fighter_psht"
         android:textSize="17dp"
         android:gravity="center"
         android:layout_marginTop="4dp" />
@@ -67,7 +68,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" TURNAMEN "
+            android:text="@string/tournament"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="50dp"
             android:textSize="17dp"
